# MemeFi

./: .gitignore  API_REQUIREMENTS.md  PROJECT_STRUCTURE.md  README.md  user-experience.md
backend/: package.json  pnpm-lock.yaml
backend/src/: index.ts
backend/src/routes/: marketRoutes.ts
backend/src/services/: marketService.ts
backend/src/types/: market.ts
client/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: Navbar.tsx  RewardsGuide.tsx  TokenManager.tsx  TokenSelector.tsx  WalletButton.tsx  WalletModal.tsx
client/app/config/: tokens.ts
client/app/context/: WalletContext.tsx
client/app/dashboard/: page.tsx
client/app/leaderboard/: page.tsx
client/app/learn/: page.tsx
client/app/liquidity/: page.tsx
client/app/rewards/: page.tsx
client/app/services/: api.ts  wallet.ts
client/app/styles/: fonts.ts
client/components/: Navbar.tsx  PriceChart.tsx  TimeSelector.tsx  TokenSelector.tsx  TradeForm.tsx
client/lib/: utils.ts
client/services/: api.ts
client/types/: token.ts
server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
server/alembic/versions/: b28414200ec4_initial_migration.py
server/app/: main.py
server/app/api/v1/: trading.py  websocket.py
server/app/models/: database.py  init_db.py  models.py
server/app/services/: analytics.py  coingecko_service.py  market_data.py  meme_tokens.py  mock_chain.py  price_feed.py  rewards.py  risk_management.py  token_service.py  trading.py  websocket.py
(+19 files in other folders)
